# django-modal-actions

./: .gitignore  CHANGELOG.md  LICENCE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: CD.yml  CI.yml
django_modal_actions/: __init__.py  apps.py  mixins.py
django_modal_actions/static/django_modal_actions/css/: modal_actions.css
django_modal_actions/static/django_modal_actions/js/: modal_actions.js
django_modal_actions/templates/_django_modal_actions/: modal_actions.html
django_modal_actions/templates/django_modal_actions/: change_form.html  change_list.html  modal_actions.html  modal_actions_buttons.html
django_modal_actions/tests/: admin.py  test_modal_actions.py  test_settings.py
