[metadata]
name = django-modal-actions
version = 0.1.2
description = A Django app for adding modal actions to the admin interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mng-dev-ai/django-modal-actions
author = Michael Gendy
author_email = nagymichel13@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django>=3.2

[options.extras_require]
dev =
    selenium>=4.24.0
    ruff>=0.6.3

[tool:ruff]
line-length = 120
target-version = "py37"
select = ["E", "F", "I", "D", "N", "S", "C90"]
exclude = 
    .git
    __pycache__
    build
    dist
    *.egg-info
    venv

[tool:ruff.isort]
known-first-party = ["django_modal_actions"]
